<resources>
    <string name="app_name">WiFiBleConfig</string>

    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scanning</string>
    <string name="disconnect">Disconnect</string>
    <string name="def_ssid">WiFiBle</string>
    <string name="def_pwd">123456789</string>

    <string name="stopped">Stopped</string>
    <string name="started">Scanning</string>
    <string name="no_permissions">No permissions</string>
    <string name="device_found">Device found %s</string>
    <string name="connected">Connected</string>

    <string name="ssid">SSID</string>
    <string name="password">Password</string>

    <string name="start_wifi">Start WiFi</string>
    <string name="stop_wifi">Stop WiFi</string>

    <string name="wifi_status_unknown">Unknown</string>
    <string name="wifi_status_started">Started. Connected clients: %d</string>
    <string name="wifi_status_stopped">Stopped</string>
    <string name="wifi_status_not_configured">Not configured</string>
    <string name="wifi_status_error">Error</string>

    <string name="location_dlg_title">Location permission required</string>
    <string name="location_dlg_text">Starting from Android M (6.0), the system requires apps to be granted location access in order to scan for BLE devices.</string>

    <string name="bluetooth_dlg_title">Bluetooth permission required</string>
    <string name="bluetooth_dlg_text">Starting from Android 12, the system requires apps to be granted Bluetooth access in order to scan for and connect to BLE devices.</string>

    <string name="error_dlg_title">Invalid WiFi settings</string>
    <string name="error_dlg_ssid_empty">SSID can not be empty</string>
    <string name="error_dlg_ssid_long">SSID must be maximum 16 characters length</string>
    <string name="error_dlg_password_empty">Password  can not be empty</string>
    <string name="error_dlg_password_long">Password must be maximum 16 characters length</string>
</resources>